--- a/GiftcardSite/app/src/main/res/values/strings.xml
+++ b/GiftcardSite/app/src/main/res/values/strings.xml
@@ -1,29 +1,29 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <string name="app_name">GiftcardSite</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">Main Menu</string>
     <string name="second_fragment_label">Register</string>
     <string name="third_fragment_label">Login</string>
-    <string name="next" tools:keep="@string/next">Next</string>
-    <string name="previous" tools:keep="@string/previous">Previous</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
 
     <string name="register">Register</string>
     <string name="welcome_to_the_nyu_giftcard_application">Welcome to the NYU Giftcard Application</string>
     <string name="login">Login</string>
-    <string name="buy" tools:keep="@string/buy">Buy a Card</string>
-    <string name="gift" tools:keep="@string/gift">Gift a Card</string>
-    <string name="use" tools:keep="@string/use">Use a Card</string>
+    <string name="buy">Buy a Card</string>
+    <string name="gift">Gift a Card</string>
+    <string name="use">Use a Card</string>
     <string name="submit">Submit</string>
     <string name="password">Password</string>
     <string name="confirm">Confirm Password</string>
     <string name="username">Username</string>
     <string name="email">Email</string>
-    <string name="domain" tools:keep="@string/domain">http://appsec.moyix.net</string>
+    <string name="domain">https://appsec.moyix.net</string>
     <string name="title_activity_scrolling">Select a Card to Buy!</string>
     <string name="title_activity_scrolling_card">Select a Card to Use!</string>
 
-    <string name="large_text" tools:keep="@string/large_text">
+    <string name="large_text">
         "Material is the metaphor.\n\n"
 
         "A material metaphor is the unifying theory of a rationalized space and a system of motion."
@@ -114,8 +114,7 @@
     </string>
     <string name="title_activity_get_card">GetCard</string>
 
-    <string name="hello_first_fragment" tools:keep="@string/hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment" tools:keep="@string/hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_use_card">use_card</string>
-    <string name="view_cards">View Cards</string>
 </resources>
